<resources>
    <string name="app_name">Sound Manager</string>
    <string name="system_textview">System Volume</string>
    <string name="media_textview">Media Volume</string>
    <string name="ringer_textview">Ringer Volume</string>
    <string name="phonecall_textview">In-Call Volume</string>
    <string name="alarm_textview">Alarm Volume</string>
    <string name="notif_textview">Notification Volume</string>
    <string name="timer_button">Schedule</string>
    <string name="setVolumeChange">Set what volume will change to:</string>
    <string name="setRingmodeChange">Set what ringmode will change to:</string>
    <string name="setVibrateChange">Set what vibrate will change to:</string>
    <string name="timerNotSet">Timer Not Set</string>
    <string name="SystemDisabled">System Timer Disabled</string>
    <string name="RingerDisabled">Ringer Timer Disabled</string>
    <string name="MediaDisabled">Media Timer Disabled</string>
    <string name="AlarmDisabled">Alarm Timer Disabled</string>
    <string name="IncallDisabled">In-Call Timer Disabled</string>
    <string name="RingmodeDisabled">Ringmode Timer Disabled</string>
    <string name="VibrateRingerDisabled">Ringer Vibrate Timer Disabled</string>
    <string name="VibrateNotifDisabled">Notification Vibrate Timer Disabled</string>
    <string name="TimersDisabled">Timers Disabled</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="use_menu_button">Use the menu button for more options.</string>
    <string name="muted">muted</string>
    <string name="SavedSystemVolume">SavedSystemVolume</string>
    <string name="SavedRingerVolume">SavedRingerVolume</string>
    <string name="SavedNotifVolume">SavedNotifVolume</string>
    <string name="SavedMediaVolume">SavedMediaVolume</string>
    <string name="SavedAlarmVolume">SavedAlarmVolume</string>
    <string name="use_menu_shortcut">Use the menu to create a shortcut to this screen.</string>
    <string name="RingerVibrate">RingerVibrate</string>
    <string name="NotificationVibrate">NotificationVibrate</string>
    <string name="ShownStartup">ShownStartup</string>
    <string name="ShownVolumeCouplingWarning">ShownVolumeCouplingWarning</string>
    <string name="SystemDisplay">SystemDisplay</string>
    <string name="RingerDisplay">RingerDisplay</string>
    <string name="AlarmDisplay">AlarmDisplay</string>
    <string name="MediaDisplay">MediaDisplay</string>
    <string name="IncallDisplay">IncallDisplay</string>
    <string name="RingmodeDisplay">RingmodeDisplay</string>
    <string name="VibrateNotifDisplay">VibrateNotifDisplay</string>
    <string name="VibrateRingerDisplay">VibrateRingerDisplay</string>
    <string name="RingerTimeStart">RingerTimeStart</string>
    <string name="RingerTimeEnd">RingerTimeEnd</string>
    <string name="RingerStartVolume">RingerStartVolume</string>
    <string name="RingerEndVolume">RingerEndVolume</string>
    <string name="AlarmTimeStart">AlarmTimeStart</string>
    <string name="AlarmTimeEnd">AlarmTimeEnd</string>
    <string name="AlarmStartVolume">AlarmStartVolume</string>
    <string name="AlarmEndVolume">AlarmEndVolume</string>
    <string name="MediaTimeStart">MediaTimeStart</string>
    <string name="MediaTimeEnd">MediaTimeEnd</string>
    <string name="MediaStartVolume">MediaStartVolume</string>
    <string name="MediaEndVolume">MediaEndVolume</string>
    <string name="SystemTimeStart">SystemTimeStart</string>
    <string name="SystemTimeEnd">SystemTimeEnd</string>
    <string name="SystemStartVolume">SystemStartVolume</string>
    <string name="SystemEndVolume">SystemEndVolume</string>
    <string name="IncallTimeStart">IncallTimeStart</string>
    <string name="IncallTimeEnd">IncallTimeEnd</string>
    <string name="IncallStartVolume">IncallStartVolume</string>
    <string name="IncallEndVolume">IncallEndVolume</string>
    <string name="RingmodeTimeStart">RingmodeTimeStart</string>
    <string name="RingmodeTimeEnd">RingmodeTimeEnd</string>
    <string name="RingmodeStartVolume">RingmodeStartVolume</string>
    <string name="RingmodeEndVolume">RingmodeEndVolume</string>
    <string name="VibrateNotifTimeStart">VibrateNotifTimeStart</string>
    <string name="VibrateNotifTimeEnd">VibrateNotifTimeEnd</string>
    <string name="VibrateNotifStartVolume">VibrateNotifStartVolume</string>
    <string name="VibrateNotifEndVolume">VibrateNotifEndVolume</string>
    <string name="VibrateRingerTimeStart">VibrateRingerTimeStart</string>
    <string name="VibrateRingerTimeEnd">VibrateRingerTimeEnd</string>
    <string name="VibrateRingerStartVolume">VibrateRingerStartVolume</string>
    <string name="VibrateRingerEndVolume">VibrateRingerEndVolume</string>
    <string name="EnableAlarm">EnableAlarm</string>
    <string name="EnableRinger">EnableRinger</string>
    <string name="EnableMedia">EnableMedia</string>
    <string name="EnableIncall">EnableIncall</string>
    <string name="EnableSystem">EnableSystem</string>
    <string name="EnableRingmode">EnableRingmode</string>
    <string name="EnableVibrateNotif">EnableVibrateNotif</string>
    <string name="EnableVibrateRinger">EnableVibrateRinger</string>
    <string name="notification_vibrate">Notification Settings</string>
    <string name="ringer_vibrate">Ringer Settings</string>
    <string name="vibrate_when_possible">Vibrate Whenever Possible</string>
    <string name="vibrate_when_silent">Vibrate Only When Silent</string>
    <string name="vibrate_off">Don\'t Vibrate</string>
    <string name="toggle_text">Set Ring Mode</string>
    <string name="ring_vibrate">May Ring, May Vibrate</string>
    <string name="vibrate_only">Vibrate Only</string>
    <string name="silent">Silent</string>
    <string name="SystemVolumeSchedule">System Volume Schedule</string>
    <string name="RingerVolumeSchedule">Ringer Volume Schedule</string>
    <string name="NotifVolumeSchedule">Notification Volume Schedule</string>
    <string name="MediaVolumeSchedule">Media Volume Schedule</string>
    <string name="AlarmVolumeSchedule">Alarm Volume Schedule</string>
    <string name="InCallVolumeSchedule">In-Call Volume Schedule</string>
    <string name="newSchedule">New Schedule</string>
    <string name="deleteSchedule">Delete</string>
    <string name="editSchedule">Edit</string>
    <string name="toggleSchedule">Toggle Active/Inactive</string>
    <string name="applySettings">Apply Settings</string>
    <string name="day0">Sun</string>
    <string name="day1">Mon</string>
    <string name="day2">Tue</string>
    <string name="day3">Wed</string>
    <string name="day4">Thu</string>
    <string name="day5">Fri</string>
    <string name="day6">Sat</string>
    <string name="startTimeLabel">Time:</string>
    <string name="volumeLabel">Volume:</string>
    <string name="vibrateLabel">Vibrate:</string>
    <string name="activeLabel">Active:</string>
    <string name="scheduleSaved">Schedule saved</string>
    <string name="done">Done</string>
    <string name="more_settings_button">More Volumes</string>
    <string name="refresh">Refresh</string>
    <string name="VolumeRefreshed">Volume Bars Updated</string>
    <string name="Close">Close</string>
    <string name="Next">Next</string>
    <string name="Back">Back</string>
    <string name="DoNotShowAgain">Do Not Show Again</string>
    <string name="tutorial_firstpage">Next: Introduction\n
        \n
        Thanks for downloading Sound Manager. If you\'d like to learn more about how to use Sound Manager,
        continue with this brief tutorial by using the Next button below. You can access the tutorial again at any time
        using the Menu key.\n
        \n
        View the end of the tutorial for F.A.Q. and Troubleshooting Tips.
    </string>
    <string name="tutorial_secondpage">Next: How to Set a Schedule\n
        \n
        Sound Manager exposes all the volume settings available on your Android phone. But it does more than just
        allow you to change the volume. You can schedule a volume change to occur at any time of day and
        on any day of the week, even when you\'re asleep!\n
        \n
        For example, if you want to be able to catch a call in the middle of the night but
        don\'t want to be disturbed for emails, you can schedule your Notification volume
        to be silent at 10 PM and set another schedule to turn it back up at 6 AM.
        Or set the Ringer and Notification volumes to a lower level at 8 AM on a weekday and back up at 5 PM.
    </string>
    <string name="tutorial_thirdpage">Next: Other Features\n
        \n
        To set a schedule:\n
        \n
        1. Press the Set Schedule button next to any of the volume settings.\n
        2. You will be presented with a list of current schedules.
        Perform a long-click on any schedule to toggle it to Active or Inactive, to delete it, or to reapply it.\n
        3. Press the Menu button to add a new schedule.\n
        4. Choose the time of day you want the volume to change.\n
        5. Use slider bar to set the volume level you want it to change to.\n
        6. Vibrate is in the same schedule with volume. If a vibrate checkbox is visible,
        make sure it is checked or unchecked how you want it.\n
        7. Choose the days of the week you want the schedule to be active.\n
        8. Then press the Back button and the schedule will be set.\n
    </string>
    <string name="tutorial_fourthpage">Next: F.A.Q.\n
        \n
        On the main volume screens, slide your finger along any of the volume bars to change the volume.\n
        \n
        Use the Menu to go to mute, toggle ring mode, or change vibrate settings.
        Use the "Mute" menu item if you\'d like to create a Mute/Unmute icon on the Home screen.\n
        \n
        Use "Apply All Schedules" from the menu to set all the volumes according to your schedules.
        This is especially useful if you\'ve changed volumes and just want a quick reset.
        Use this feature if the schedules ever get out of sync,
        such as over a Daylight Savings Time or Time Zone change.\n
        \n
        If you turn off your phone, don\'t worry that you\'ll miss any schedules.
        They will reapply automatically on reboot.\n
        \n
        The app can\'t detect if you change the volume elsewhere. As an Android app,
        it\'s state is kept in memory unless you use the Back button to back out of the app.
        To make sure your Volume sliders are accurate, just use the Refresh button on the main screen.\n
    </string>
</resources>