<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">
            <Button
                android:id="@+id/alarm_timer_button"
                android:text="@string/timer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip">
                <TextView
                    android:id="@+id/alarm_textview"
                    android:text="@string/alarm_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dip" />
                <SeekBar
                    android:id="@+id/alarm_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                        android:layout_marginRight="20dip" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/alarm_timer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">
            <Button
                android:id="@+id/phonecall_timer_button"
                android:text="@string/timer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip">
                <TextView
                    android:id="@+id/phonecall_textview"
                    android:text="@string/phonecall_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dip" />
                <SeekBar
                    android:id="@+id/phonecall_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                        android:layout_marginRight="20dip" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/phonecall_timer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

</LinearLayout>